fix api issue
